--- a/Resources/css/index.css
+++ b/Resources/css/index.css
@@ -1,16 +1,15 @@
 /* Html */
 html {
-    /* background-color: #66FCF1; */
-    /* background-color: #88BDBC; */
-    /* background-color: #EAE7DC; */
-    /* background-color: #5680E9; */
-    /* background-color: #84CEEB; */
-    background-color: #5AB9EA;
-    /* background-color: #8860D0; */
+    background-color: #FFFFFF;
 }
 
 /* Body */
-
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+}
 
 /* General */
 h1,
@@ -19,14 +18,124 @@ h3,
 p {
     font-family: Helvetica, sans-serif;
     text-align: left;
-    color: #EAE7DC;
+    color: #000000;
 }
 
+h1 {
+    font-size: 64px;
+}
+
+h2{
+    text-align: center;
+    margin-top: 100px;
+}
+
+p {
+    font-size: 36px;
+}
 /* Navigation */
 
-
-
 /* Header */
+header {
+    /* background-color: #A5DCE4; */
+    background-color: #B0DDC2;
+    /* background-color: #F8C296; */
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 780px;
+}
+
+nav {
+    margin: 0px auto;
+    padding-top: 20px;
+}
+
+.above-the-fold {
+    position: relative;
+    top: 250px;
+    left: 60px;
+}
+
+.above-the-fold div {
+    width: 50%;
+}
+
+/* Below The Fold */
+.below-the-fold {
+    width: 100%;
+    height: 780px;
+    border-top: 1px solid #000000;
+}
 
 
 
+/* Problem */
+
+#problem {
+    
+}
+
+#success {
+    
+}
+
+#guide {
+
+}
+
+#how-it-works {
+    
+}
+
+/* Button */
+.cta-main {
+    color: #FFFFFF;
+    background-color: #1F0600;
+    font-size: 24px;
+    padding: 20px 30px;
+    border-radius: 5px;
+}
+
+.below-the-fold .cta-main {
+    display: block;
+    font-weight: 700;
+    margin: 40px auto; 
+}
+
+/* Footer */
+footer {
+    width: 100%;
+    height: 300px;
+}
+
+/* 
+
+The code below is used to style navigation and buttons
+.share {
+  border: 1px solid LightGrey;
+  padding: 40px 0px;
+  position: relative;
+  text-align: center;
+  width: 100%;
+}
+
+.share a {
+  background: red;
+  border: 1px solid red;
+  border-radius: 3px;
+  color: white;
+  display: inline-block;
+  margin: 10px;
+  padding: 14px;
+  text-decoration: none;
+}
+
+.share a:hover {
+  background: white;
+  border: 1px solid red;
+  color: red;
+}
+
+*/
