--- a/Resources/css/index.css
+++ b/Resources/css/index.css
@@ -30,6 +30,10 @@ h2{
     margin-top: 100px;
 }
 
+h3 {
+    text-align: center;
+}
+
 p {
     font-size: 36px;
 }
@@ -50,10 +54,35 @@ header {
 nav {
     margin: 0px auto;
     padding-top: 20px;
+    width: 100%;
+    height: 100px;
+}
+
+nav li {
+    display: inline-block;
+    margin: 0 50px;
+}
+
+.logo {
+    margin: 0 50px 0 20px;
+}
+
+nav span {
+    position: absolute;
+    right: 50px; 
+}
+
+nav span button {
+    color: #FFFFFF;
+    background-color: #1F0600;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 20px 30px;
+    border-radius: 5px;
 }
 
 .above-the-fold {
-    position: relative;
+    position: absolute;
     top: 250px;
     left: 60px;
 }
@@ -73,20 +102,24 @@ nav {
 
 /* Problem */
 
-#problem {
+
+/* How It Works */
+
+.steps {
+    display: block;
+    margin: 40px auto;
+    width: 66%;
+    height: 50%;
     
+    border: 1px solid black;
 }
 
-#success {
-    
-}
-
-#guide {
-
-}
-
-#how-it-works {
-    
+.steps div {
+    /*display: inline-block;*/
+    width: 33.15%;
+    float: left;
+    border: 1px solid black;
+    height: 100%;
 }
 
 /* Button */
@@ -108,6 +141,9 @@ nav {
 footer {
     width: 100%;
     height: 300px;
+    color: #FFFFFF;
+    font-weight: 500;
+    background-color: #1F0600;
 }
 
 /* 
