--- a/project/resources/css/index.css
+++ b/project/resources/css/index.css
@@ -49,19 +49,19 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    height: 900px;
+    height: 990px;
 }
 
 nav {
     margin: 0px auto;
-    padding-top: 20px;
+    /*padding-top: 10px;*/
     width: 100%;
     height: 100px;
 }
 
 nav li {
     display: inline-block;
-    margin: 0 50px;
+    margin: 0 30px; 
 }
 
 .logo {
@@ -74,22 +74,53 @@ nav span {
 }
 
 nav span button {
-    color: #FFFFFF;
-    background-color: #1F0600;
+    color: #181E34;
+    background-color: #FFFFFF;
+    /*color: #FFFFFF;*/
+    /*background-color: #1F0600;*/
     font-size: 20px;
     font-weight: 700;
     padding: 20px 30px;
     border-radius: 5px;
+    z-index: 100;
 }
 
 .above-the-fold {
-    position: absolute;
-    top: 250px;
-    left: 60px;
+   display: inline-block;
 }
 
-.above-the-fold div {
-    width: 50%;
+#atf-left {
+    position: absolute;
+    top: 400px;
+    left: 80px;
+    width: 40%;
+}
+
+#atf-right {
+        position: absolute;
+        left: 0px;
+        top: -87px;
+        right: 0px;
+        bottom: 0px;
+        background-image: -webkit-gradient(linear, left top, left bottom, from(#002e38), to(#264e5a));
+        background-image: linear-gradient(180deg, 
+        #181E34,
+        #181E34);
+        -webkit-transform: translate(60%, 0px);
+        -ms-transform: translate(60%, 0px);
+        transform: translate(60%, 0px);
+        z-index: -100;
+    
+    /*width: 50%;
+    height: 100%;
+    background-color: #181E34;*/
+}
+
+#atf-image {
+    z-index: 100;
+    position: absolute;
+    right: 400px;
+    box-shadow: 7px 7px 50px 0 rgba(0, 0, 0, 0.25);;
 }
 
 .header-image {
@@ -99,15 +130,26 @@ nav span button {
     z-index: -10;
 }
 
-/* Below The Fold */
-.below-the-fold {
-    width: 100%;
-    height: 780px;
-    /*border-top: 1px solid #000000;*/
+#search form,
+button {
+    display: inline-block;
+}
+ 
+input[type="email"] {
+    min-height: 70px;
+    min-width: 400px;
+    border-radius: 5px;
+    border:1px solid #cccccc;
+    font-size: 24px;
 }
 
-
-
+input[type="submit"] {
+    color: #FFFFFF;
+    background-color: #181E34;
+    font-size: 24px;
+    padding: 20px 30px;
+    border-radius: 5px;
+}
 /* Problem */
 #problem {
     
