Update css, ejs and node

--- a/project/html/index.ejs
+++ b/project/html/index.ejs
@@ -15,7 +15,7 @@
                     <li>About</li>
                     <span>
                         <button>Become a Total Care Pro</button>
-                        <button><a target="signup.html">Persoanlise Your Hairstyle</a></button>
+                        <button><a href="/signup">Personalise Your Hairstyle</a></button>
                     </span>
                 </ul>
             </nav>
@@ -40,7 +40,8 @@
             </main>
             
         </header>
-    
+         <!-- Button to open the modal -->
+        
         <div id="problem" class="below-the-fold">
             <div>
                 <h2>Tired of Having to Guess the Right Style for You?</h2>
@@ -89,7 +90,6 @@
                 <li> Junk Drawer</li>
             </ul>
         </footer>
-       
     </body>
 
 </html>
