Added new css and html to index

--- a/project/html/index.ejs
+++ b/project/html/index.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/grid.css" />
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
     <div class="container">
@@ -73,6 +73,7 @@
         <div class="problem-column-3">
           <div class="a">
             <h3>Problem 1</h3>
+            <hr>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
               iure minima eligendi alias pariatur fugit omnis ad earum explicabo
@@ -82,6 +83,7 @@
           </div>
           <div class="b">
             <h3>Problem 2</h3>
+            <hr>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
               iure minima eligendi alias pariatur fugit omnis ad earum explicabo
@@ -91,6 +93,7 @@
           </div>
           <div class="c">
             <h3>Problem 3</h3>
+            <hr>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
               iure minima eligendi alias pariatur fugit omnis ad earum explicabo
@@ -99,6 +102,27 @@
             </p>
         </div>
       </div>
+      <div>
+        <a href="/signup" class="btn">Personalise Your Experience</a>
+      </div>
+    </div>
+    <div class="success">
+      <div class="success-header">
+        <h2>A Better Way To Get Your Next Hairstyle</h2>
+      </div>
+      <div class="success-img1">
+        <!-- Success Image 1 -->
+        <img src="../resources/images/WhatsApp Image 2020-01-11 at 23.58.19.jpeg" alt="">
+      </div>
+      <div class="success-img2">
+        <!-- Success Image 1 -->
+        <img src="../resources/images/WhatsApp Image 2020-01-11 at 23.58.17 (2).jpeg" alt="">
+      </div>
+      <div class="success-img3">
+        <!-- Success Image 1 -->
+        <img src="../resources/images/WhatsApp Image 2020-01-11 at 23.58.18.jpeg" alt="">
+      </div>
+      <div class="background-color"></div>
     </div>
   </body>
 </html>
