--- a/project/resources/css/index.css
+++ b/project/resources/css/index.css
@@ -136,7 +136,7 @@ button {
 
 input[type="email"] {
   min-height: 70px;
-  min-width: 455px;
+  min-width: 450px;
   border-radius: 5px;
   border: 1px solid #cccccc;
   font-size: 24px;
@@ -151,30 +151,116 @@ input[type="submit"] {
 }
 
 /* Problem */
+.problem .btn {
+  color: #FFFFFF;
+  background-color: #181e34;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 20px 30px;
+  border-radius: 5px;
+  margin: 0 41%;
+}
+
+.problem-header h2 {
+  text-align: center;
+}
+
 .problem-column-3 {
   display: grid;
   width: 100%;
-  height: 400px;
-  grid-template-columns: auto repeat(3, 1fr) auto;
-  grid-gap: 20px;
+  height: 600px;
+  grid-template-columns: auto repeat(3, 500px) auto;
+  grid-gap: 50px;
   justify-items: center;
   justify-content: center;
 }
 
 .problem-column-3 .a {
   grid-column: 2/ span 1;
-  border: 1px solid #4a4a4a;
-  padding: 10px;
+  box-shadow: 7px 7px 50px 0 rgba(0, 0, 0, 0.25);
+  padding: 30px;
 }
 
 .problem-column-3 .b {
   grid-column: 3 / span 1;
-  border: 1px solid #4a4a4a;
-  padding: 10px;
+  box-shadow: 7px 7px 50px 0 rgba(0, 0, 0, 0.25);
+  padding: 30px;
+
 }
 
 .problem-column-3 .c {
   grid-column: 4 / span 1;
-  border: 1px solid #4a4a4a;
-  padding: 10px;
+  box-shadow: 7px 7px 50px 0 rgba(0, 0, 0, 0.25);
+  padding: 30px;
+}
+
+.problem-column-3 p {
+  line-height: 1.5;
+}
+
+.problem-column-3 hr {
+  border: 1px solid lightgray;
+}
+
+/* Success */
+.success {
+  display: grid;
+  max-width: auto;
+  min-width: auto;
+  grid-template-columns: repeat(16, 1fr);
+  grid-template-rows: 50px 100px auto 150px;
+  grid-column-gap: 20px;
+  margin-top: 50px;
+}
+
+.background-color {
+  grid-column: 1 / span 6;
+  grid-row: 1 / 5;
+  background-color: #181e34;
+  z-index: -1;
+}
+
+.success-header {
+  grid-row: 2 / 3;
+  grid-column: 1 / span 6 ;
+  display: inline-block;
+}
+
+.success-header h2 {
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.success-img1 {
+  grid-row: 3 / 4;
+  grid-column: 7 / span 3 ;
+  width: 100%;
+}
+
+.success-img1 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.success-img2 {
+  grid-row: 3 / 4;
+  grid-column: 10 / span 3 ;
+}
+
+.success-img2 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.success-img3 {
+  grid-row: 3 / 4;
+  grid-column: 13 / span 3 ;
+}
+
+.success-img3 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
