add success img, css and html

--- a/project/html/index.ejs
+++ b/project/html/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Total Hair Care Solution</title>
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
@@ -109,20 +109,28 @@
     <div class="success">
       <div class="success-header">
         <h2>A Better Way To Get Your Next Hairstyle</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, tempora! Aliquid sed autem recusandae! Corrupti laboriosam eveniet dolore? Et ad recusandae rem iusto tempora ab ducimus delectus vero quo incidunt.</p>
       </div>
       <div class="success-img1">
         <!-- Success Image 1 -->
-        <img src="../resources/images/WhatsApp Image 2020-01-11 at 23.58.19.jpeg" alt="">
+        <div><h3>Search</h3></div>
+        <div><img src="../resources/images/WhatsApp Image 2020-01-11 at 23.58.19.jpeg" alt=""></div>
+        <div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, est.</p></div>
       </div>
       <div class="success-img2">
-        <!-- Success Image 1 -->
-        <img src="../resources/images/WhatsApp Image 2020-01-11 at 23.58.17 (2).jpeg" alt="">
+        <!-- Success Image 2 -->
+        <div><h3>Chat</h3></div>
+        <div><img src="../resources/images/WhatsApp Image 2020-01-11 at 23.58.17 (2).jpeg" alt=""></div>
+        <div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, est.</p></div>
       </div>
       <div class="success-img3">
-        <!-- Success Image 1 -->
-        <img src="../resources/images/WhatsApp Image 2020-01-11 at 23.58.18.jpeg" alt="">
+        <!-- Success Image 3 -->
+        <div><h3>Book</h3></div>
+        <div><img src="../resources/images/WhatsApp Image 2020-01-11 at 23.58.18.jpeg" alt=""></div>
+        <div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, est.</p></div>
       </div>
       <div class="background-color"></div>
+      <a href="/signup" class="btn">Get a Better Experience</a>
     </div>
   </body>
 </html>
