--- a/project/resources/css/index.css
+++ b/project/resources/css/index.css
@@ -208,8 +208,8 @@ input[type="submit"] {
   max-width: auto;
   min-width: auto;
   grid-template-columns: repeat(16, 1fr);
-  grid-template-rows: 50px 100px auto 150px;
-  grid-column-gap: 20px;
+  grid-template-rows: 10px 50px auto 60px;
+  grid-column-gap: 30px;
   margin-top: 50px;
 }
 
@@ -221,13 +221,20 @@ input[type="submit"] {
 }
 
 .success-header {
-  grid-row: 2 / 3;
+  grid-row: 3 / 4;
   grid-column: 1 / span 6 ;
   display: inline-block;
+  margin-top: 50%;
+  margin-left: 20px;
 }
 
 .success-header h2 {
-  text-align: center;
+  text-align: left;
+  color: #FFFFFF;
+}
+
+.success-header p {
+  text-align: left;
   color: #FFFFFF;
 }
 
@@ -241,6 +248,7 @@ input[type="submit"] {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  box-shadow: 7px 7px 50px 0 rgba(0, 0, 0, 0.25);
 }
 
 .success-img2 {
@@ -252,6 +260,7 @@ input[type="submit"] {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  box-shadow: 7px 7px 50px 0 rgba(0, 0, 0, 0.25);
 }
 
 .success-img3 {
@@ -263,4 +272,17 @@ input[type="submit"] {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  box-shadow: 7px 7px 50px 0 rgba(0, 0, 0, 0.25);
+}
+
+.success .btn {
+  grid-row: 4 / 5;
+  grid-column: 10 / span 3 ;
+  color: #FFFFFF;
+  background-color: #181e34;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 20px 30px;
+  border-radius: 5px;
+  text-align: center;
 }
